objects/GeWS_WebService_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store Web Service Integration Settings</description>
    <fields>
        <fullName>GeWS_Endpoint__c</fullName>
        <description>Ge - General, WS - WebService Framework,The URI which is called as part of the web-service request</description>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_IntegrationCredentialIdentifier__c</fullName>
        <description>Ge - General, WS - WebService Framework, Stores the Integration Credential Identifier used to retrieve a record which stores Loggin details for this external System</description>
        <label>Integration Credential Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Timeout__c</fullName>
        <description>Ge - General, WS - WebService Framework,The time in milliseconds after which the web-service request times out</description>
        <label>Timeout</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeWS_User_Agent__c</fullName>
        <description>Ge - General, WS - WebService Framework,The time in milliseconds after which the web-service request times out</description>
        <label>User Agent</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WebService Integration Settings</label>
</CustomObject>